# candidly-api

./: .env.local  .env.prod  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: code-quality.yml  test.yml
app/: main.py  worker.py
app/api/v1/endpoints/: analyze.py  ping.py
app/core/: config.py  constants.py  exceptions.py
app/db/: base.py  init_db.py  session.py
app/db/models/: audio_analysis.py
app/schemas/: audio_analysis.py  enums.py
app/services/: s3.py
app/services/assembly/: __init__.py  assembly.py  base.py  mock.py  prod.py
app/tasks/: __init__.py  audio.py  process_audio.py  upload_audio.py
core/: config.py
services/: s3.py
services/assembly/: mock.py  prod.py
test/: test_analyze.py  test_ping.py
tests/: conftest.py  test_analyze.py  test_ping.py
